tests/NormalTests/paczka1/small_fuzzy/10919276.err
Error in line 1: hBImE3bE S628 99,5
Error in line 6: IdrILzYRM S628 7,0
